--- a/YifyFileDownloader.csproj
+++ b/YifyFileDownloader.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <Folder Include="Persistence\" />
+    <Folder Include="Resources\Config\" />
   </ItemGroup>
 
   <ItemGroup>
