--- a/App.config
+++ b/App.config
@@ -1,3 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <connectionStrings>
+    <add name="YTSConnectionString" connectionString="Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\Projects\\.Net\\YifyFileDownloader\\Resources\\Database\\yts.mdf;Integrated Security=True;Connect Timeout=30" providerName="System.Data.SqlClient" />
+  </connectionStrings>
+
+  <appSettings>
+    <add key="serilog:minimum-level" value="Info"/>
+    <add key="serilog:using:File" value="Serilog.Sinks.File" />
+    <add key="serilog:write-to:File.path" value="Logs\log.txt" />
+    <add key="serilog:write-to:File.shared" value="true" />
+    <add key="serilog:write-to:File.rollOnFileSizeLimit" value="true" />
+    <add key="serilog:write-to:File.fileSizeLimitBytes" value="4000" />
+  </appSettings>
 </configuration>
