--- a/App.config
+++ b/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <connectionStrings>
-    <add name="YTSConnectionString" connectionString="Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\Projects\\.Net\\YifyFileDownloader\\Resources\\Database\\yts.mdf;Integrated Security=True;Connect Timeout=30" providerName="System.Data.SqlClient" />
+    <add name="YTSConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\\Projects\\.Net\\YifyFileDownloader\\Resources\\Database\\yts.mdf;Initial Catalog=ytsmoviesdb;Integrated Security=True;Connect Timeout=30" providerName="Microsoft SqlClient Data Provider for SQL Server" />
   </connectionStrings>
 
   <appSettings>
