--- a/App.config
+++ b/App.config
@@ -5,11 +5,15 @@
   </connectionStrings>
 
   <appSettings>
+    <!--serilog-->
     <add key="serilog:minimum-level" value="Info"/>
     <add key="serilog:using:File" value="Serilog.Sinks.File" />
     <add key="serilog:write-to:File.path" value="Logs\log.txt" />
     <add key="serilog:write-to:File.shared" value="true" />
     <add key="serilog:write-to:File.rollOnFileSizeLimit" value="true" />
     <add key="serilog:write-to:File.fileSizeLimitBytes" value="4000" />
+    
+    <!--api settings-->
+    <add key="Endpoint" value="https://yts.mx/api/v2/list_movies.json"/>
   </appSettings>
 </configuration>
