--- a/App.config
+++ b/App.config
@@ -6,7 +6,7 @@
 
   <appSettings>
     <!--serilog-->
-    <add key="serilog:minimum-level" value="Info"/>
+    <add key="serilog:minimum-level" value="Information"/>
     <add key="serilog:using:File" value="Serilog.Sinks.File" />
     <add key="serilog:write-to:File.path" value="Logs\log.txt" />
     <add key="serilog:write-to:File.shared" value="true" />
@@ -15,5 +15,6 @@
     
     <!--api settings-->
     <add key="Endpoint" value="https://yts.mx/api/v2/list_movies.json"/>
+    <add key="Qualities" value="1080p,720p"/>
   </appSettings>
 </configuration>
