minor bug fixed

--- a/App.config
+++ b/App.config
@@ -6,12 +6,13 @@
 
   <appSettings>
     <!--serilog-->
-    <add key="serilog:minimum-level" value="Information"/>
-    <add key="serilog:using:File" value="Serilog.Sinks.File" />
-    <add key="serilog:write-to:File.path" value="Logs\log.txt" />
-    <add key="serilog:write-to:File.shared" value="true" />
-    <add key="serilog:write-to:File.rollOnFileSizeLimit" value="true" />
-    <add key="serilog:write-to:File.fileSizeLimitBytes" value="16384" />
+    <add key="SerilogMinimumLevel" value="Information"/>
+    <add key="SerilogUsingFile" value="Serilog.Sinks.File" />
+    <add key="SerilogFilePath" value="C:\\Projects\\.Net\\YifyFileDownloader\\Logs\\log.txt" />
+    <add key="SerilogFileShared" value="true" />
+    <add key="SerilogRollOnFileSizeLimit" value="true" />
+    <add key="SerilogRollingInterval" value="Day" />
+    <add key="SerilogFileSizeLimitBytes" value="16777216" />
     
     <!--api settings-->
     <add key="Endpoint" value="https://yts.mx/api/v2/list_movies.json"/>
