--- a/YifyFileDownloader.csproj
+++ b/YifyFileDownloader.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Migrations\" />
     <Folder Include="Resources\Config\" />
   </ItemGroup>
 
