--- a/App.config
+++ b/App.config
@@ -1,14 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <connectionStrings>
-    <add name="YTSConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\\Projects\\.Net\\YifyFileDownloader\\Resources\\Database\\yts.mdf;Initial Catalog=ytsmoviesdb;Integrated Security=True;Connect Timeout=30" providerName="Microsoft SqlClient Data Provider for SQL Server" />
+    <add name="YTSConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=\\Resources\\Database\\yts.mdf;Initial Catalog=ytsmoviesdb;Integrated Security=True;Connect Timeout=30" providerName="Microsoft SqlClient Data Provider for SQL Server" />
   </connectionStrings>
 
   <appSettings>
     <!--serilog-->
     <add key="SerilogMinimumLevel" value="Information"/>
     <add key="SerilogUsingFile" value="Serilog.Sinks.File" />
-    <add key="SerilogFilePath" value="C:\\Projects\\.Net\\YifyFileDownloader\\Logs\\log.txt" />
+    <add key="SerilogFilePath" value="\\Logs\\log.txt" />
     <add key="SerilogFileShared" value="true" />
     <add key="SerilogRollOnFileSizeLimit" value="true" />
     <add key="SerilogRollingInterval" value="Day" />
