integration of sqlite db

--- a/App.config
+++ b/App.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <connectionStrings>
-    <add name="YTSConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=\\Resources\\Database\\yts.mdf;Initial Catalog=ytsmoviesdb;Integrated Security=True;Connect Timeout=30" providerName="Microsoft SqlClient Data Provider for SQL Server" />
+    <!--<add name="YTSConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=\\Resources\\Database\\yts.mdf;Initial Catalog=ytsmoviesdb;Integrated Security=True;Connect Timeout=30" providerName="Microsoft SqlClient Data Provider for SQL Server" />-->
+    <add name="YTSConnectionString" connectionString="Data Source=C:\SqlLite\ytsdb.db;" providerName=".NET Framework Data Provider for OLE DB" />
   </connectionStrings>
 
   <appSettings>
