--- a/YifyFileDownloader.csproj
+++ b/YifyFileDownloader.csproj
@@ -46,11 +46,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="Resources\Database\yts.mdf">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
-    </None>
-    <None Update="Resources\Database\yts_log.ldf">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    <None Update="Resources\Database\ytsdb.db">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
