page number fix

--- a/App.config
+++ b/App.config
@@ -9,7 +9,7 @@
     <!--serilog-->
     <add key="SerilogMinimumLevel" value="Information"/>
     <add key="SerilogUsingFile" value="Serilog.Sinks.File" />
-    <add key="SerilogFilePath" value="\\Logs\\log.txt" />
+    <add key="SerilogFilePath" value=".\\Logs\\log.txt" />
     <add key="SerilogFileShared" value="true" />
     <add key="SerilogRollOnFileSizeLimit" value="true" />
     <add key="SerilogRollingInterval" value="Day" />
@@ -18,7 +18,7 @@
     <!--api settings-->
     <add key="Endpoint" value="https://yts.mx/api/v2/list_movies.json"/>
     <add key="Qualities" value="1080p,720p"/>
-    
+    <add key="Page" value="235"/>
     <add key="SleepMilliseconds" value="5000"/>
   </appSettings>
 </configuration>
