--- a/YifyCommon/YifyCommon.csproj
+++ b/YifyCommon/YifyCommon.csproj
@@ -7,8 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Exceptions\" />
-    <Folder Include="Services\" />
+    <Folder Include="Services\Contracts\" />
   </ItemGroup>
 
   <ItemGroup>
