[WIP] added logging

--- a/YifyApi/appsettings.json
+++ b/YifyApi/appsettings.json
@@ -8,5 +8,14 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "LocalDb": "Data Source=C:\\SqlLite\\ytsdb.db;"
+  },
+  "Serilog": {
+    "MinimumLevel": "Information",
+    "UsingFile": "Serilog.Sinks.File",
+    "FilePath": "D:\\Logs\\Yify\\log.txt",
+    "FileShared": "true",
+    "RollOnFileSizeLimit": "true",
+    "RollingInterval": "Day",
+    "FileSizeLimitBytes": "16777216"
   }
 }
